--- a/circularqueue.html
+++ b/circularqueue.html
@@ -5,12 +5,12 @@
     <title>Circular Queue Demo</title>
     <link rel="stylesheet" href="stack.css" media="screen" title="no title" charset="utf-8">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialdesignicons.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="purple lighten-2 white-text">
       <h3>Circular  Queue</h3>
-      <a class='dropdown-button btn teal' href='#' data-activates='dropdown1'><i class="material-icons left">menu</i> Menu</a>
+      <a class='dropdown-button btn teal' href='#' data-activates='dropdown1'><i class="mdi mdi-menu left"></i> Menu</a>
 
   <!-- Dropdown Structure -->
       <ul id='dropdown1' class='dropdown-content'>
@@ -42,24 +42,48 @@
         </div>
       </div>
       <div class="row">
-        <div class="col m6 l6">
+        <div class="col m6 l5"  style="text-align:left;">
           <form id="inputnilai" action="index.html" method="post">
-            <div class="col m6 input-field" style="text-align:left">
+            <div class="col m12 input-field" style="text-align:left;">
               <label for="nilai">Nilai yang dimasukan</label>
               <input type="text" id="nilai" name="name" required value="">
-              <button class="waves-effect waves-light btn" id="enqueue" type="submit"><i class="material-icons left">file_download</i>enQueue</button><br>
-
+            </div>
+            <div class="col m12 input-field" style="text-align:left;">
+            <button class="waves-effect waves-light btn" id="enqueue" type="submit"><i class="mdi mdi-download left"></i>enQueue</button><br>
             </div>
           </form>
         </div>
-        <div class="col m6 l6">
-          <strong>Aktivitas Terakhir:</strong> <br>
-          <h4 id="act"></h4>
-          <strong>Informasi:</strong> <br>
-          <h4 id="isi"></h4>
-          <button class="blue waves-effect waves-light btn" id="clear" type="button"><i class="material-icons left">clear</i>Clear</button>
-          <button class="blue waves-effect waves-light btn" id="peek" type="button"><i class="material-icons left">visibility</i>Peak</button>
-          <button class="blue waves-effect waves-light btn" id="dequeue" type="button"><i class="material-icons left">file_upload</i>deQueue</button>
+        <div class="col m6 l7" style="text-align: left">
+          <strong>Keterangan</strong><br>
+          <div class="col m12 l12" >
+            <table>
+              <tr>
+                <td style="text-align: center">
+                  <strong>Head</strong>
+                </td>
+                <td style="text-align: center">
+                  <strong>Rear/Tail</strong>
+                </td>
+              </tr>
+              <tr>
+                <td style="text-align: center">
+                  <div style="margin: auto;  width: 20px; border-top: 30px solid #14d945; border-left: 30px solid transparent;         border-right: 30px solid transparent;"></div>
+                </td>
+                <td style="text-align: center">
+                  <div style="margin: auto; width: 20px; border-bottom: 30px solid #1498d9; border-left: 30px solid transparent; border-right: 30px solid transparent;"></div>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <div class="col m12 l12" style="text-align: left">
+            <strong>Aktivitas terakhir</strong>
+            <h5 id="aktiv"></h5>
+            <strong>Hasil:</strong>
+            <h5 id="isi"></h5>
+          </div>
+          <button class="blue waves-effect waves-light btn" id="clear" type="button"><i class="mdi mdi-refresh left"></i>Clear</button>
+          <button class="blue waves-effect waves-light btn" id="peek" type="button"><i class="mdi mdi-eye left"></i>Peak</button>
+          <button class="blue waves-effect waves-light btn" id="dequeue" type="button"><i class="mdi mdi-upload left"></i>deQueue</button>
         </div>
       </div>
     </div>
@@ -107,6 +131,7 @@
 
       $('#dequeue').click(function() {
         if (jumlah !=0) {
+          $('#aktiv').html('Dequeue');
           $('#isi').html($('.space-'+head).text());
           $('.space-'+head).html('');
           $('.space').removeClass('head');
@@ -122,11 +147,18 @@
       });
 
       $('#peek').click(function() {
-
+        if (jumlah !=0) {
+          $('#aktiv').html('Peek');
+          $('#isi').html($('.space-'+head).text());
+        } else {
+          Materialize.toast('Antrian kosong', 4000, 'red');
+        }
       });
 
       $('#clear').click(function() {
         $('.space').html('');
+        $('#aktiv').html('Clear');
+        $('#isi').html("");
         Materialize.toast('Antrian sudah kosongkan', 2000, 'red');
         $('.space').removeClass('rear');
         $('.space').removeClass('head');
