--- a/stack.html
+++ b/stack.html
@@ -43,13 +43,15 @@
               </div>
             </div>
           </form>
-          <button class="waves-effect waves-light btn" id="clear" type="button"><i class="mdi mdi-refresh left"></i> Clear</button>
-          <button class="waves-effect waves-light btn" id="peek" type="button"><i class="mdi mdi-eye left"></i> Peak</button>
+          <button class="waves-effect waves-light btn" id="peek" type="button"><i class="mdi mdi-eye left"></i> Peek</button>
           <button class="waves-effect waves-light btn" id="pop" type="button"><i class="mdi mdi-upload left"></i> Pop</button>
+          <button class="waves-effect waves-light btn" id="clear" type="button"><i class="mdi mdi-refresh left"></i> Clear</button>
 
         </div>
-        <div class="col m4 l4">
-          <h4>Isi:</h4>
+        <div class="col m4 l4" style="text-align: left">
+          <strong>Aktivitas terakhir</strong>
+          <h5 id="aktiv"></h5>
+          <strong>Hasil:</strong>
           <h5 id="isi"></h5>
         </div>
       </div>
@@ -73,7 +75,8 @@
           e.preventDefault();
           if ($('#nilai').val() != "") {
             if (i < 5) {
-              $('.konten').prepend($('<div class="stack blue flow-text white-text">'+$('#nilai').val()+'</div>').fadeIn('slow'));
+              $('.stack').removeClass('bordering');
+              $('.konten').prepend($('<div class="stack stack-'+i+' blue flow-text white-text">'+$('#nilai').val()+'</div>').fadeIn('slow'));
               Materialize.toast('Berhasil melakukan push ke-'+(i+1), 4000, 'teal lighten-1');
               $('#nilai').val("");
               i++;
@@ -94,6 +97,7 @@
 
         $("button#pop").click(function() {
           if (i != 0) {
+            $('#aktiv').html('Pop');
             Materialize.toast('Berhasil melakukan pengambilan data stack ke-'+i, 1000);
             var isian = $('.stack-'+(i-1)+'').text();
             $('#isi').html(isian);
@@ -105,6 +109,8 @@
         });
 
         $("button#peek").click(function() {
+          $('#aktiv').html('Peek');
+          $('.stack').removeClass('bordering');
           $('.stack-'+(i-1)+'').addClass('bordering');
           var isian = $('.stack-'+(i-1)+'').text();
           $('#isi').html(isian);
