--- a/queue.html
+++ b/queue.html
@@ -43,21 +43,21 @@
       </div>
       <div class="row">
         <form id="inputnilai" action="index.html" method="post">
-          <div class="col m6 input-field" style="text-align:left">
+          <div class="col m6 l5 input-field" style="text-align:left">
             <label for="nilai">Nilai yang dimasukan</label>
             <input type="text" id="nilai" name="name" required value="">
-            <button class="waves-effect waves-light btn" id="enqueue" type="submit"><i class="material-icons left">file_download</i>enQueue</button><br>
+            <button class="waves-effect waves-light btn" id="enqueue" type="submit"><i class="mdi mdi-upload left"></i>>enQueue</button><br>
 
           </div>
         </form>
-        <div class="col m6" style="text-align: left">
+        <div class="col m6 l7" style="text-align: left">
           <strong>Aktivitas:</strong>
           <h5 id="action"></h5>
           <strong>Informasi</strong>
           <h3 id="isi"></h3>
-          <button class="waves-effect waves-light btn" id="dequeue" type="button"><i class="material-icons left">file_upload</i>deQueue</button>
-          <button class="waves-effect waves-light btn" id="peek" type="button"><i class="material-icons left">visibility</i>Peek</button>
-          <button class="waves-effect waves-light btn" id="clear" type="button"><i class="material-icons left">clear</i>Clear</button>
+          <button class="waves-effect waves-light btn" id="dequeue" type="button"><i class="mdi mdi-upload left"></i>deQueue</button>
+          <button class="waves-effect waves-light btn" id="peek" type="button"><i class="mdi mdi-eye left"></i>Peek</button>
+          <button class="waves-effect waves-light btn" id="clear" type="button"><i class="mdi mdi-refresh left"></i>Clear</button>
         </div>
       </div>
     </div>
